tests/golden/errors/commas.stderr
error[formatting]: kanso has no commas; enumerations are space-separated
  --> commas.kso:2:17
   2 |   total = sum [1, 2]
                       ^
